# StoreMe--Personal-cloud-storage-via-telegram-API-

./: .gitignore
Frontend/: README.md  index.html  package-lock.json  package.json
Frontend/src/: App.css  App.jsx  LoginPage.css  LoginPage.jsx  UploadPage.css  UploadPage.jsx  styles.css
backend/: main.py  pyproject.toml  requirements.txt
