[project]
name = "StoreMe-Backend"
version = "0.1.0"
description = "Backend Server of Storeme WebApp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptg>=0.5.2",
    "fastapi[standard]>=0.120.2",
    "phonenumbers>=9.0.17",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "telethon>=1.41.2",
]
